2002-10-28  Jason Thorpe  <thorpej@wasabisystems.com>

	* testsuite/thread/pthread5.cc: Include <unistd.h>
	if _GLIBCPP_HAVE_UNISTD_H is defined.
	(main): Only use pthread_attr_setscope if
	_POSIX_THREAD_PRIORITY_SCHEDULING is defined.

2002-10-28  Jason Thorpe  <thorpej@wasabisystems.com>

	* testsuite/thread/pthread1.cc: Enable on *-*-netbsd*.
	* testsuite/thread/pthread2.cc: Likewise.
	* testsuite/thread/pthread3.cc: Likewise.
	* testsuite/thread/pthread4.cc: Likewise.
	* testsuite/thread/pthread5.cc: Likewise.
	* testsuite/thread/pthread6.cc: Likewise.

2002-10-27  Paolo Carlini  <pcarlini@unitus.it>

	PR libstdc++/8347
	* include/bits/basic_string.tcc
	(string::_S_construct(_InIter, _InIter, const _Alloc&,
	forward_iterator_tag)): Do not throw logic error if
	__beg == NULL && __end == __beg.
	(string::string(const _CharT*, const _Alloc&)): Tweak.
	* testsuite/21_strings/ctor_copy_dtor.cc: Add test05 from PR.

2002-10-24  Hans-Peter Nilsson  <hp@bitrange.com>

	PR other/3337
	PR bootstrap/6763
	PR bootstrap/8122
	* testsuite/testsuite_hooks.cc (__set_testsuite_memlimit): Use
	__typeof__ (r.rlim_cur), not rlim_t in declaration of limit.

2002-10-23  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/22_locale/num_put_members_char.cc (test01): Swap size
	and decimal_point arguments of find.
	* testsuite/22_locale/num_put_members_wchar_t.cc (test01): Likewise.

2002-10-22  Jakub Jelinek  <jakub@redhat.com>

	* Makefile.am (check-abi, new-abi-baseline): Use @glibcpp_srcdir@
	instead of ${top_srcdir}.
	* Makefile.in: Rebuilt.

2002-10-22  Loren J. Rittle  <ljrittle@acm.org>

	* testsuite/18_support/numeric_limits.cc (test_extrema<long double>):
	Remove specialization for FreeBSD systems.

2002-10-18  Loren J. Rittle  <ljrittle@acm.org>

	* configure.target (freebsd*): Use abi_baseline_triplet.
	* config/abi/i386-unknown-freebsd4/baseline_symbols.txt: New file.
	* config/abi/i386-unknown-freebsd4.7/baseline_symbols.txt: Remove.
