@@ -1,3 +1,10 @@
+2002-10-31  Benjamin Kosnik  <bkoz@redhat.com>
+
+	PR libstdc++/8348
+	* include/bits/istream.tcc (istream::tellg): Remove sentry bits.
+	(istream::seekg): Same.
+	* testsuite/27_io/istream_seeks.cc (test06): New.
+	
 2002-10-28  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* testsuite/thread/pthread5.cc: Include <unistd.h>
